[package]
name = "gba"
version = "0.1.0"
authors = ["Angus Holder <aholder97@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
bitflags = "1.0.4"
enum-primitive-derive = "0.1.2"
num-traits = {version = "*", default-features = false}
bitintr = "0.2.0"
regex = "1.1.5"
lazy_static = "1.3.0"
imgui = "0.0.23"
imgui-glium-renderer = "0.0.23"
imgui-winit-support = "0.0.23"
glutin = "0.19.0"
glium = "0.23.0"
failure = "0.1.5"